# ComfyUI-GuliNodes

./: README.md  __init__.py  aspect_ratio_node.py  pyproject.toml  requirements.txt  seed_generator.py  test_import.py
ComfyUI_GuliNodes.egg-info/: PKG-INFO  SOURCES.txt
example_workflows/: 图像调整示例.json  提示词反推示例.json  视频及图像压缩示例.json
guli_nodes/: __init__.py  aspect_ratio.py  clipboard.py  group_controller.py  image_tools.py  lora_tools.py  model_loaders.py  seed_tools.py  text_tools.py  video_tools.py  web_ai_tools.py
guli_nodes/image_prompt/: __init__.py  image_prompt.py  model_loader.py
web/: gg-clipboard.js  gg-group-controller.js  gg-image-comparer.js  gg-lora-custom-loader.js  gg-toolbar.js  gg-variable-display.js  gg-video-path-loader.js  gg-video-save-preview.js  gg-web-ai-reverse.js
