[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-gulinodes"
version = "1.0.7"
description = "GuliNodes - 工具栏 + 图像尺寸工具 + 图像工具 + 图像对比 + LoRA工具 + 编组控制 + 文本工具 + 种子工具 + 模型加载 + 图像反推"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Guli" }
]
keywords = [
  "comfyui",
  "custom-nodes",
  "image-processing",
  "text-utils",
  "lora",
  "gguf",
  "workflow-tools"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "torch",
  "numpy",
  "pillow",
  "opencv-python",
  "mediapipe",
  "llama-cpp-python"
]

[project.urls]
Homepage = "https://github.com/guliacer/ComfyUI-GuliNodes"
Repository = "https://github.com/guliacer/ComfyUI-GuliNodes"
Issues = "https://github.com/guliacer/ComfyUI-GuliNodes/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["guli_nodes*"]

[tool.comfy]
PublisherId = "guliacer"
DisplayName = "ComfyUI-GuliNodes"
Icon = ""

[tool.gulinodes]
name = "ComfyUI-GuliNodes"
node_count = 12
python_package = "guli_nodes"
web_directory = "web"
summary = "Custom nodes for image tools, text processing, group control, LoRA helpers, model loading, and image prompt analysis."
